WebContent/brand/yhoo/css/health.yhoo.css
/* ... */
@media (max-width: 767px) {
  .health .featuresMode .hospitalCover .category > .labelInColumn > .content {
    color: #1d57aa;
    border-top: 1px solid #b9d1f3;
    border-bottom: 1px solid #b9d1f3;
  }
  .health .featuresMode .hospitalCover .category > .content.c {
    background-color: #ffffff;
  }
  .health .featuresMode .hospitalCover .category.expanded > .labelInColumn .content,
  .health .featuresMode .hospitalCover .category.expanding > .labelInColumn .content {
    background-color: #246dd6;
    border-top: 1px solid #16417e;
    border-bottom: 0px solid #16417e;
    color: #ffffff;
  }
  .health .featuresMode .hospitalCover .category.expanded > .labelInColumn .content .help-icon,
  .health .featuresMode .hospitalCover .category.expanding > .labelInColumn .content .help-icon {
    color: #ffffff;
  }
  .health .featuresMode .hospitalCover .category.expanded > .content,
  .health .featuresMode .hospitalCover .category.expanding > .content {
    background-color: #1d57aa;
    border-color: #16417e;
    color: #ffffff;
  }
  .health .featuresMode .hospitalCover .category.expanded > .content .icon-tick,
  .health .featuresMode .hospitalCover .category.expanding > .content .icon-tick,
  .health .featuresMode .hospitalCover .category.expanded > .content .icon-cross,
  .health .featuresMode .hospitalCover .category.expanding > .content .icon-cross {
    color: #ffffff;
  }
  .health .featuresMode .hospitalCover .category.expanded > .children > :first-child .labelInColumn > .content,
  .health .featuresMode .hospitalCover .category.expanding > .children > :first-child .labelInColumn > .content {
    border-top: 1px solid #16417e;
  }
  .health .featuresMode .extrasCover .category > .labelInColumn > .content {
    color: #3f7a15;
    border-top: 1px solid #cff2b5;
    border-bottom: 1px solid #cff2b5;
  }
  .health .featuresMode .extrasCover .category > .content.c {
    background-color: #ffffff;
  }
  .health .featuresMode .extrasCover .category.expanded > .labelInColumn .content,
  .health .featuresMode .extrasCover .category.expanding > .labelInColumn .content {
    background-color: #65c422;
    border-top: 1px solid #386d13;
    border-bottom: 0px solid #386d13;
    color: #ffffff;
  }
  .health .featuresMode .extrasCover .category.expanded > .labelInColumn .content .help-icon,
  .health .featuresMode .extrasCover .category.expanding > .labelInColumn .content .help-icon {
    color: #ffffff;
  }
  .health .featuresMode .extrasCover .category.expanded > .content,
  .health .featuresMode .extrasCover .category.expanding > .content {
    background-color: #4f981a;
    border-color: #386d13;
    color: #ffffff;
  }
  .health .featuresMode .extrasCover .category.expanded > .content .icon-tick,
  .health .featuresMode .extrasCover .category.expanding > .content .icon-tick,
  .health .featuresMode .extrasCover .category.expanded > .content .icon-cross,
  .health .featuresMode .extrasCover .category.expanding > .content .icon-cross {
    color: #ffffff;
  }
  .health .featuresMode .extrasCover .category.expanded > .children > :first-child .labelInColumn > .content,
  .health .featuresMode .extrasCover .category.expanding > .children > :first-child .labelInColumn > .content {
    border-top: 1px solid #386d13;
  }
}
.health .featuresMode  .feature > .content {
  background-color: #f6f7e9;
}
@media (min-width: 768px) {
  .health .featuresMode  .feature:nth-child(odd) > .content {
    background-color: #e4e6d8;
  }
}
.health .featuresMode  .result-row .feature > .content {
  text-align: center;
}
@media (min-width: 768px) {
  .health .featuresMode  .result-row .feature > .content,
  .health .featuresMode  .result-row .feature:nth-child(odd) > .content {
    text-align: left;
  }
}
.health .featuresMode  .result-row .feature .labelInColumn > .content {
  text-align: left;
}
.health .featuresMode  .result-row .section .feature .labelInColumn > .content {
  font-weight: normal;
  font-family: 'SourceSansProSemiBold';
}
.health .featuresMode  .compared .category > .content {
  background-color: #f2f2f2;
}
.health .featuresMode  .compared .category:nth-child(odd) > .content {
  background-color: #f4f4f4;
}
@media (max-width: 767px) {
  .health .featuresMode .feature .labelInColumn > .content {
    border-top: 1px solid #d7dc9e;
    border-bottom: 1px solid #d7dc9e;
  }
  .health .featuresMode .result-row .feature > .content.c {
    background-color: #fff;
  }
  .health .featuresMode .result-row .content.c {
    border-right: 1px solid #d7dc9e;
  }
  .health .featuresMode .result-row:nth-child(odd) .expanded > .content {
    border-right: 1px solid #ffffff;
  }
}
@media (max-width: 767px) {
  .health .result-row:nth-child(2n+2) .labelInColumn > .content {
    background-color: transparent !important;
  }
  .health .result-row:nth-child(2n+2) .labelInColumn .contentInner {
    visibility: hidden;
  }
}
.health .featuresMode {
  /** COLOURS **/
}
@media (min-width: 768px) {
  .health .featuresMode .resultsOverflow {
    width: 536px;
  }
}
@media (min-width: 992px) {
  .health .featuresMode .resultsOverflow {
    width: 779px;
  }
}
@media (min-width: 1200px) {
  .health .featuresMode .resultsOverflow {
    width: 949px;
  }
}
.health .featuresMode .labelInColumn {
  width: 200%;
}
.health .featuresMode .help-icon {
  color: #333333;
}
.health .featuresMode .hospitalCover .category.expanded > .content > .help-icon,
.health .featuresMode .hospitalCover .category > .content.expandableHover > .help-icon {
  color: #fff;
}
.health .featuresMode .extrasCover .category.expanded > .content > .help-icon,
.health .featuresMode .extrasCover .category > .content.expandableHover > .help-icon {
  color: #fff;
}
.health .featuresMode .promosFeature .labelInColumn,
.health .featuresMode .promosFeature .content {
  color: #ab1d21;
}
/* ... */

